# Cerberus

./: CMakeLists.txt  README.md
src/: hash.cpp  init.cpp  login.cpp  mod.h  packets.cpp
src/commands/: commands.h  common.cpp  logged-in.cpp  logged-out.cpp  parsing.cpp
src/config/: accounts.cpp  admins.cpp  config.h  file.cpp  webhook.cpp  welcome.cpp
